Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30522

macOS: Closing application window while context menu is open leaves menu open

XMLWordPrintable

    • macOS
    • 91d53ba22e1de1c81e9f082517fd81d711c69909 (qt/tqtc-qtbase/6.1) 59a06f2281e230a5ceef687a823de0ea7f7f7b63 (qt/tqtc-qtbase/6.2) 70b94eea10d7af83cced09296755a8af28e167b5 (qt/tqtc-qtbase/dev) 56082c28fe89d204822862853961f292ac42d96b (qt/tqtc-qtbase/5.15)

      An application window can be closed using the close button from the titlebar on Mac even while context menu is shown. This is consistent with native macOS applications. However, the context menu remains open and visible (unless the application quits in response to the window closing, obviously).

      Steps to reproduce:

      • run the attached reproducer in QTBUG30522.zip, which turns off the QApplication::setQuitOnLastWindowClosed property
      • right-click in the window to open a context menu
      • click on the window close button in the top left corner of the window

      Expected behaviour:
      The context menu should be closed together with the application window (in fact, before the application window)

      Actual behaviour:
      Application window is closed, but the context menu remains.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            qtcomsupport Qt Support
            Votes:
            2 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes